envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8000 }

static_resources:
  listeners:
    - name: engress_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 9000 }
      filter_chains:
          filters:
            - name: "envoy.http_connection_manager"
              config:
                stat_prefix: "egress_http"
                codec_type: "AUTO"
                route_config:
                  name: "egress-route"
                  virtual_hosts:
                    - name: "egress-service"
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/service1"}
                          route: { cluster: "springboot-service-envoy-1"}
                        - match: {prefix: "/service2"}
                          route: { cluster: "springboot-service-envoy-2"}
                http_filters:
                  - name: "envoy.router"

    - name: ingress_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        filters:
          - name: "envoy.http_connection_manager"
            config:
              stat_prefix: "ingress_http"
              codec_type: "AUTO"
              route_config:
                name: "ingress-route"
                virtual_hosts:
                  - name: "ingress-service"
                    domains: ["*"]
                    routes:
                      - match: {prefix: "/service1"}
                        route: { cluster: "springboot-service-1"}
                      - match: {prefix: "/service2"}
                        route: { cluster: "springboot-service-2"}
              http_filters:
                - name: "envoy.router"

  clusters:
    -
      name: "springboot-service-2"
      connect_timeout: "0.5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "springboot-service-2"
            port_value: 8090
    -
      name: "springboot-service-1"
      connect_timeout: "0.5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "springboot-service-1"
            port_value: 8080
    -
      name: "springboot-service-envoy-2"
      connect_timeout: "0.5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "springboot-service-2"
            port_value: 10000
    -
      name: "springboot-service-envoy-1"
      connect_timeout: "0.5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "springboot-service-1"
            port_value: 10000
