spring-boot-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-service-1
  template:
    metadata:
      labels:
        app: springboot-service-1
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: springboot-service-1
        image: satyak1238.azurecr.io/spring-boot-service
        env:   
        - name: SERVER_PORT
          value: "8080"
        - name: CONTEXT_PATH
          value: "service1"          
        ports:
        - containerPort: 8080
          name: s1appport
          
      - name: envoy-service-1
        image: satyak1238.azurecr.io/envoyproxy/envoy-dev:latest         
        ports:
        - containerPort: 9000
          name: s1envporteng    
        - containerPort: 10000
          name: s1envporting            
          
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-1
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: s1appport
  - port: 9000
    name: s1envporteng
  - port: 10000
    name: s1envporting   
  selector:
    app: springboot-service-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-service-2
  template:
    metadata:
      labels:
        app: springboot-service-2
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: springboot-service-2
        image: satyak1238.azurecr.io/spring-boot-service
        env:   
        - name: SERVER_PORT
          value: "8090"
        - name: CONTEXT_PATH
          value: "service2"          
        ports:
        - containerPort: 8090
          name: service2port
          
      - name: envoy-service-2
        image: satyak1238.azurecr.io/envoyproxy/envoy-dev:latest         
        ports:
        - containerPort: 9000
          name: s1envporteng    
        - containerPort: 10000
          name: s1envporting          
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-2
spec:
  type: LoadBalancer
  ports:
  - port: 8090
    name: s1appport
  - port: 9000
    name: s1envporteng
  - port: 10000
    name: s1envporting   
  selector:
    app: springboot-service-2
